# aoc2025

./: .gitignore  ATTEMPTS.md  CMakeLists.txt
day1/: main.cpp  model.cpp  model.h  part1.cpp  part2.cpp  test.cpp
day2/: gen.h  invalid.cpp  invalid.h  model.cpp  model.h  part1.cpp  test.cpp
day3/: model.cpp  model.h  part1.cpp  test.cpp
utils/: input.cpp  input.h
